# Spagraph

./: .gitignore  AGENTS.md  BertLogitsAttention.py  DECONV_API_UPDATE.md  DUAL_HEAD_EDGE_FILTERING.md  DYNAMIC_CLUSTER_IMPLEMENTATION_PLAN.md  DYNAMIC_CLUSTER_USAGE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  METHODS.md  PACKAGE_SUMMARY.md  QUICK_START_DUAL_HEAD.md  README.md  STAGE2_CELLCOM_INTEGRATION.md  STDecoder.ipynb  STDecoder.py  TODO.md  TWO_STAGE_TRAINING.md  calculate_lr_scores.py  ccc_todo.md  cellchat_human.csv  clusting.ipynb  config.py  create_simplified_csv.py  data_utils.py  dataprocess.ipynb  dgi_pretrain_model.py  edit_manuscript.py  evaluate.ipynb  evaluate.py  evaluate_benchmark_metrics.py  evaluate_fixed.py  example_usage.py  fusion_embedding_clustering.py  hetero_graph_builder.py  hetero_model.py  hetero_vae_data_utils.py  hg38_human_mouse.txt  (+37 more)
SC_MAP_ST/: OUTPUT_RESULTS_README.md  README.md  annotate_clusters.ipynb  annotate_clusters_with_celltype.ipynb  cell_composition_visualization PADC.ipynb  deconv.py  deconv_model.py  evaluate_benchmark_metrics.py  model.py  requirements.txt  run.ipynb  run_CID4465.ipynb  run_CID44971.ipynb  run_PDAC.ipynb  run_deconv.ipynb  run_multimodal.ipynb  simple_stage1.py  simple_stage2.py  stage1.py  stage1_multimodal.py  stage1_utils.py  stage2.py  test_loss_function.py  vae_utils.py
STEncoder/: STEncoder_data_utils.py  attention_pretrain.py  gene_tokenizer_vocab.json  gene_tokenizer_vocab_nolab.json  model.py  tokenizer.py
docs/: parameters.md  parameters.xlsx  reproduction.md
evaluate/: .gitignore  README.md
fig/: GSE144240.ipynb
notebook/: st.ipynb  token.ipynb  trangram反卷积.ipynb  注释.ipynb
run_notebook/: rerun_CID44971_lr_associated_ranking.py  rerun_GSE144236_cellcom_old_key_no_lr_identity.py  rerun_GSE144236_cellcom_old_key_original_params.py  rerun_GSE144236_lr_associated_411367e.py  rerun_GSE144236_lr_associated_ranking.py  run_CID44971.ipynb  run_CID44971_stage1_only.py  run_GSE144240 copy.ipynb  run_GSE144240.ipynb  run_GSE144240.py  run_GSE144240_stage1_only.py  run_GSE211956.ipynb  run_GSE211956_stage1_only.py  run_GSE243275.ipynb  run_GSE243275_stage1_only.py  run_PDAC.ipynb  run_STARmap.ipynb  run_gse144236_relation_ranker_gpu.py  run_simulate.ipynb
scmapst/: __init__.py  __version__.py  cli.py
scripts/: calibrate_lr_from_synthetic_v2.py  evaluate_deconv_figure2.py  evaluate_deconv_paired.py  plot_synthetic_lr_v2_20seeds.py  (+13 more)
(+243 files in other folders)
